[package]
name = "rusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "net",] }
tonic = { version = "0.8.3", features = ["tls", "gzip"] }
prost = "0.11"
#tower = "0.4"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
